--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,25 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
-
+    compileSdkVersion 34
+    buildToolsVersion "33.0.0"
+    signingConfigs {
+        release {
+            storeFile file("Key.jks")
+            storePassword "payamd20"
+            keyAlias "Payam"
+            keyPassword "payamd20"
+        }
+    }
     defaultConfig {
         applicationId "com.managmentdic"
-        minSdkVersion 19
-        targetSdkVersion 33
-        versionCode 29
-        versionName "5.0.1"
+        minSdkVersion 24
+        targetSdkVersion 34
+        versionCode 32
+        versionName "5.2.1"
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled true
             debuggable = false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -24,10 +32,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.mikepenz:materialdrawer:6.1.2"
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.channguyen:rsv:1.0.1'
 }
